packages/galleryberg-gallery-block/src/image/common.scss
.wp-block-galleryberg-image {
	line-height: 1;
	margin: 0;
	position: relative;
	overflow: visible;
	&.galleryberg-image-center {
		width: fit-content;
		margin-left: auto;
		margin-right: auto;
	}

	&.galleryberg-image-right {
		width: fit-content;
		margin-left: auto;
	}

	figcaption {
		margin-top: 0.5em;

		// Caption Type: Below Image (default)
		&.caption-type-below {
			position: relative;
			margin-top: 0.5em;
		}

		// Caption Type: Full Overlay
		&.caption-type-full-overlay {
			position: absolute;
			top: 0;
			left: 0;
			right: 0;
			bottom: 0;
			margin: 0;
			padding: 1em;
			display: flex;
			background-color: rgba(0, 0, 0, 0.5);
			color: #fff;

			// Default alignment (center center)
			align-items: center;
			justify-content: center;
			text-align: center;

			// Matrix alignment - vertical positions
			&.caption-align-top-left,
			&.caption-align-top-center,
			&.caption-align-top-right {
				align-items: flex-start;
			}

			&.caption-align-bottom-left,
			&.caption-align-bottom-center,
			&.caption-align-bottom-right {
				align-items: flex-end;
			}

			// Matrix alignment - horizontal positions
			&.caption-align-top-left,
			&.caption-align-center-left,
			&.caption-align-bottom-left {
				justify-content: flex-start;
				text-align: left;
			}

			&.caption-align-top-right,
			&.caption-align-center-right,
			&.caption-align-bottom-right {
				justify-content: flex-end;
				text-align: right;
			}

			&.caption-align-top-center,
			&.caption-align-center-center,
			&.caption-align-bottom-center {
				justify-content: center;
				text-align: center;
			}
		}

		// Caption Type: Bar Overlay
		&.caption-type-bar-overlay {
			position: absolute;
			margin: 0;
			padding: 0.75em 1em;
			background-color: rgba(0, 0, 0, 0.7);
			color: #fff;

			// Default position (bottom)
			bottom: 0;
			left: 0;
			right: 0;

			// Matrix alignment - vertical positions
			&.caption-align-top-left,
			&.caption-align-top-center,
			&.caption-align-top-right {
				bottom: auto;
				top: 0;
			}

			// Center vertical position
			&.caption-align-center-left,
			&.caption-align-center-center,
			&.caption-align-center-right {
				bottom: auto;
				top: 50%;
				transform: translateY(-50%);
			}

			// For bar overlay, we only apply the horizontal alignment to text
			&.caption-align-top-left,
			&.caption-align-center-left,
			&.caption-align-bottom-left {
				text-align: left;
			}

			&.caption-align-top-center,
			&.caption-align-center-center,
			&.caption-align-bottom-center {
				text-align: center;
			}

			&.caption-align-top-right,
			&.caption-align-center-right,
			&.caption-align-bottom-right {
				text-align: right;
			}
		}

		// Caption Visibility: Show on Hover
		&.caption-visibility-show-on-hover {
			opacity: 0;
			transition: opacity 0.3s ease;
		}

		// Caption Visibility: Hide on Hover
		&.caption-visibility-hide-on-hover {
			opacity: 1;
			transition: opacity 0.3s ease;
		}
	}

	// Hover states for visibility
	&:hover {
		figcaption {
			&.caption-visibility-show-on-hover {
				opacity: 1;
			}

			&.caption-visibility-hide-on-hover {
				opacity: 0;
			}
		}
	}

	img {
		box-sizing: border-box;
	}

	// Hover Effect
	&.has-hover-effect {
		overflow: hidden;

		img {
			transition: transform 0.3s ease;
		}

		// Zoom In: Image scales up on hover
		&.hover-zoom-in:hover img {
			transform: scale(1.1);
		}

		// Zoom Out: Image starts scaled and returns to normal on hover
		&.hover-zoom-out img {
			transform: scale(1.1);
		}

		&.hover-zoom-out:hover img {
			transform: scale(1);
		}
	}

	&.is-selected {
		.components-placeholder {
			&.has-illustration {
				border-radius: 2px;
				box-shadow: inset 0 0 0 1px #1e1e1e;
				&::before {
					opacity: 0;
				}
			}
		}
		.components-placeholder__illustration {
			display: none;
		}
	}
}
.galleryberg-width-height-control {
	display: flex;
	gap: 10px;
	grid-column: 1 / -1;
}

